fix icon mobile menu

--- a/style/style.css
+++ b/style/style.css
@@ -177,11 +177,11 @@ section {
   width: 20px;
   height: 20px;
 }
-.mobile-menu-btn{
-border-color: transparent;
-background-color: transparent;
+.mobile-menu-btn {
+  border-color: transparent;
+  background-color: transparent;
 }
-.mobile-menu-icon{
+.mobile-menu-icon {
   width: 30px;
   height: 30px;
 }
@@ -194,11 +194,11 @@ background-color: transparent;
   .header-container {
     width: 1340px;
   }
-  .header-navigate{
+  .header-navigate {
     display: flex;
-  } 
-  .mobile-menu-btn{
-  display: none;
+  }
+  .mobile-menu-btn {
+    display: none;
   }
 }
 /* ==================hero======================= */
@@ -257,11 +257,9 @@ background-color: transparent;
 @media screen and (min-width: 1340px) {
   .hero-container {
     flex-direction: row;
-    
   }
   .hero-text-container {
     padding: 100px 80px;
-  
   }
   .hero-title {
     font-size: 48px;
@@ -438,7 +436,7 @@ background-color: transparent;
     text-transform: uppercase;
   }
   .about-us-content-container {
-   flex-direction: row;
+    flex-direction: row;
   }
   .about-us-first-container {
     width: 658px;
@@ -607,7 +605,7 @@ background-color: transparent;
     width: 1260px;
   }
   .courses-fe-list {
-   flex-direction: row;
+    flex-direction: row;
   }
   .courses-level {
     padding: 40px;
@@ -687,7 +685,7 @@ background-color: transparent;
 }
 @media screen and (min-width: 1340px) {
   .form-container {
-   flex-direction: row;
+    flex-direction: row;
   }
   .form-text-container {
     width: 658px;
@@ -728,7 +726,7 @@ background-color: transparent;
   border: 1px solid #036;
   background-color: #fbfbfb;
 }
-.review-avatar{
+.review-avatar {
   width: 200px;
   height: 225px;
   border-radius: 12px;
@@ -801,22 +799,22 @@ background-color: transparent;
   width: 13px;
   height: 4px;
   border-radius: 20px;
-  background: #C2D1E0;
+  background: #c2d1e0;
   transition: background-color 0.3s;
 }
 
 .custom-pagination-bullet.swiper-pagination-bullet-active {
   width: 24px;
-height: 4px;
+  height: 4px;
   background-color: #003366;
-  border-radius: 20px; 
+  border-radius: 20px;
 }
 .slider-btn-prev.swiper-button-disabled,
 .slider-btn-next.swiper-button-disabled {
-  background-color: #C2D1E0; 
-  cursor: not-allowed; 
+  background-color: #c2d1e0;
+  cursor: not-allowed;
 }
-.swiper-pagination-bullets.swiper-pagination-horizontal{
+.swiper-pagination-bullets.swiper-pagination-horizontal {
   top: 15px;
   left: 57px;
   width: 100px;
@@ -859,7 +857,7 @@ height: 4px;
 .accordeon-item {
   display: flex;
   padding: 30px 40px;
- justify-content: space-between;
+  justify-content: space-between;
   align-self: stretch;
   border-radius: 16px;
   border: 1px solid #036;
@@ -881,7 +879,7 @@ height: 4px;
   border-radius: 100px;
   border-color: transparent;
   background-color: #036;
-  color: #FBFBFB;
+  color: #fbfbfb;
   font-size: 25px;
   font-weight: 100;
 }
@@ -950,6 +948,7 @@ height: 4px;
 }
 .faq-form-input-text {
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
   height: 114px;
   padding: 12px 14px;
   border-radius: 4px;
@@ -963,7 +962,8 @@ height: 4px;
 .faq-form-btn {
   display: flex;
   box-sizing: border-box;
-  padding: 14px 30px;
+  padding: 10px 15px;
+  font-size: 12px;
   align-items: flex-start;
   gap: 10px;
   border-radius: 14px;
@@ -984,7 +984,7 @@ height: 4px;
 }
 @media screen and (min-width: 1340px) {
   .faq-container {
-   flex-direction: row;
+    flex-direction: row;
   }
   .faq-title {
     font-size: 42px;
@@ -1017,9 +1017,14 @@ height: 4px;
     width: 424px;
     left: -85px;
   }
+  .faq-form-btn {
+    font-size: 20px;
+    padding: 14px 30px;
+  }
 }
 /* ================== footer ======================= */
 .footer-section {
+  padding: 32px 0;
 }
 .footer {
   display: flex;
@@ -1053,30 +1058,30 @@ height: 4px;
 }
 @media screen and (min-width: 1340px) {
   .footer {
-flex-direction: row;
+    flex-direction: row;
   }
 }
 /* ================== courses menu ======================= */
 .courses-menu-container {
   display: flex;
-padding: 12px 14px;
-align-items: center;
-gap: 30px;
-border-radius: 100px;
-border: 1px solid  #BFCCD8;
-background-color: #bfccd87c;
-width: 150px;
-position: absolute;
-bottom: -35px;
-right: 305px;
-visibility: hidden;
+  padding: 12px 14px;
+  align-items: center;
+  gap: 30px;
+  border-radius: 100px;
+  border: 1px solid #bfccd8;
+  background-color: #bfccd87c;
+  width: 150px;
+  position: absolute;
+  bottom: -35px;
+  right: 305px;
+  visibility: hidden;
 }
 .courses-menu-list {
   margin: 0 auto;
 }
 
-.courses-menu-link{  
-  color:  #343434;
+.courses-menu-link {
+  color: #343434;
   text-align: center;
   font-weight: 500;
   line-height: 100%; /* 16px */
@@ -1087,7 +1092,7 @@ visibility: hidden;
   color: #003366;
 }
 
-.courses-is-open{
+.courses-is-open {
   visibility: visible;
 }
 .scroll-btn {
@@ -1106,55 +1111,59 @@ visibility: hidden;
   .scroll-btn {
     display: none;
   }
-  }
-  /* Mobile menu */
-  .mobile-menu {
-    background-color: #003366;
-    padding: 30px 40px;
-    position: fixed;
-    z-index: 999999999;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    transform: translateX(100%);
-    transition: transform 250ms linear;
-  }
-  .mobile-menu.is-open {
-    transform: translateX(0%);
 }
-.mobile-menu-container{
+/* Mobile menu */
+.mobile-menu {
+  background-color: #003366;
+  padding: 30px 40px;
+  position: fixed;
+  z-index: 999999999;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  transform: translateX(100%);
+  transition: transform 250ms linear;
+}
+.mobile-menu.is-open {
+  transform: translateX(0%);
+}
+.mobile-menu-container {
   position: relative;
   width: 220px;
 }
-  .mobile-menu-list {
-    margin-top: 50px;
-  }
-  .mobile-menu-item {
-
-    margin-bottom: 10px;
-  }
-  .mobile-menu-nav-link {
-    color: #BFCCD8;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mobile-menu-nav-link:focus,
-  .mobile-menu-nav-link:hover,
-  .mobile-menu-nav-link:active {
-    color: #e0e7ef;
-  }
-  .mobile-close-btn {
-    border: 1px solid #e7e9fc;
-    border-color: #e7e9fc;
-    background-color: transparent;
-    line-height: 0;
-    padding: 0;
-    position: absolute;
-    top: 0;
-    right: 20px;
-    z-index: 9999999;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
+.mobile-menu-list {
+  margin-top: 50px;
+}
+.mobile-menu-item {
+  margin-bottom: 10px;
+}
+.mobile-menu-nav-link {
+  color: #bfccd8;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu-nav-link:focus,
+.mobile-menu-nav-link:hover,
+.mobile-menu-nav-link:active {
+  color: #e0e7ef;
+}
+.mobile-close-btn {
+  border: 1px solid #e7e9fc;
+  border-color: #e7e9fc;
+  background-color: transparent;
+  line-height: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  right: 20px;
+  z-index: 9999999;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+}
+.mobile-close-icon {
+  stroke: #bfccd8;
+  width: 20px;
+  height: 20px;
 }
